--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "laravel-nova": "^1.0"
     },
     "dependencies": {
-        "vue": "^2.5.0",
-        "@riophae/vue-treeselect": "^0.4.0"
+        "@riophae/vue-treeselect": "^0.4.0",
+        "vue": "^2.5.0"
     }
 }
